--- a/tool/xrpl.scss
+++ b/tool/xrpl.scss
@@ -208,6 +208,8 @@ h3 a:hover {
 
 .landing .curated-links a,
 .landing .curated-links a:hover,
+.landing .children-display a,
+.landing .children-display a:hover,
 .landing a.card,
 .xrpl-footer a {
   color: $black;
